Some image fixes + footer links

--- a/i18n/ar/docusaurus-plugin-content-docs/current/01.overview/10.what_is_yunohost/what_is_yunohost.mdx
+++ b/i18n/ar/docusaurus-plugin-content-docs/current/01.overview/10.what_is_yunohost/what_is_yunohost.mdx
@@ -7,7 +7,7 @@ routes:
   default: '/whatsyunohost'
 ---
 
-![YunoHost logo](image://YunoHost_logo_vertical.png?resize=400&id=ynhlogo)
+![YunoHost logo](/img/YunoHost_logo_vertical.png?resize=400&id=ynhlogo)
 
 واي يونوهوست YunoHost هو **نظام لتشغيل الخوادم** صُمِّم لتسهيل الإستضافة الذاتية لخدمات الإنترنت.
 هو مُرتكز و منسجم كافة الإنسجام مع توزيعة <a href="https://debian.org">غنو/لينكس ديبيان</a>.
@@ -52,7 +52,7 @@ Constatant l’engouement croissant autour de YunoHost et de l’auto-hébergeme
 ### التسمية
 
 **YunoHost** مُستمَدٌّ مِن لُغة الإنترنت العاميّة « Y U NO Host » و بالمعنى التقريبي « لماذا لا تستضيف نفسك بنفسك ». <a href="https://ar.m.wikipedia.org/wiki/%D9%85%D9%8A%D9%85_%D8%A5%D9%86%D8%AA%D8%B1%D9%86%D8%AA">ميم الإنترنت</a> الذي يصف المعنى بالتقريب هو :
-![](image://dude_yunohost.jpg)
+![](/img/dude_yunohost.jpg)
 
 ---
 
