--- a/i18n/es/docusaurus-plugin-content-docs/current/02.administer/15.admin_guide/40.xmpp/xmpp.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/02.administer/15.admin_guide/40.xmpp/xmpp.mdx
@@ -7,7 +7,7 @@ routes:
   default: '/XMPP_server'
 ---
 
-![](image://XMPP_logo.png?resize=100)
+![](/img/XMPP_logo.png?resize=100)
 
 YunoHost está instalado con un servidor de mensajería instantánea Metronome que implementa el [protocolo XMPP](https://es.wikipedia.org/wiki/Extensible_Messaging_and_Presence_Protocol).
 
