--- a/i18n/it/docusaurus-plugin-content-docs/current/01.overview/10.what_is_yunohost/what_is_yunohost.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/01.overview/10.what_is_yunohost/what_is_yunohost.mdx
@@ -7,23 +7,23 @@ routes:
   default: '/whatsyunohost'
 ---
 
-![YunoHost logo](image://YunoHost_logo_vertical.png?resize=400&id=ynhlogo)
+![YunoHost logo](/img/YunoHost_logo_vertical.png?resize=400&id=ynhlogo)
 
 YunoHost è un **sistema operativo** che mira a rendere il più semplice possibile l'amministrazione di un **server**  e quindi a permettere ad un numero sempre maggiore di persone di avvicinarsi al [self-hosting](/selfhosting), assicurandosi che la gestione del server rimanga affidabile, sicura ed etica. Si tratta di un progetto basato su software libero e copyleft gestito esclusivamente da volontari. Tecnicamente YunoHost può essere vista come una distribuzione basata su [Debian GNU/Linux](https://debian.org) che può essere installata su [diverse tipologie di hardware](/install).
 
 ## Caratteristiche
 
-- ![](image://icon-debian.png?resize=32&classes=inline) Basato su Debian; 
-- ![](image://icon-tools.png?resize=32&classes=inline) Amministra il tuo server attraverso **un'interfaccia web amichevole** ;
-- ![](image://icon-package.png?resize=32&classes=inline) Installa le **applicazioni in pochi clic**;
-- ![](image://icon-users.png?resize=32&classes=inline) Gestisci **gli utenti ** <small>(basato su LDAP)</small>;
-- ![](image://icon-globe.png?resize=32&classes=inline) Gestisci **i nomi di dominio**;
-- ![](image://icon-medic.png?resize=32&classes=inline) Crea e ripristina  **i backup**;
-- ![](image://icon-door.png?resize=32&classes=inline) Connettiti contemporaneamente a tutte le applicazioni  attraverso **il portale utente** <small>(NGINX, SSOwat)</small>;
-- ![](image://icon-mail.png?resize=32&classes=inline) Include uno **stack di posta elettronica completo** <small>(Postfix, Dovecot, Rspamd, DKIM)</small>;
-- ![](image://icon-messaging.png?resize=32&classes=inline)... e anche un **server di messaggistica istantanea** <small>(XMPP)</small>;
-- ![](image://icon-lock.png?resize=32&classes=inline) Gestisce i **certificati SSL** <small>(basati su Let's Encrypt)</small> ;
-- ![](image://icon-shield.png?resize=32&classes=inline)... e i **sistemi di sicurezza** <small>(Fail2ban, yunohost-firewall)</small>;
+- ![](/img/icon-debian.png?resize=32&classes=inline) Basato su Debian; 
+- ![](/img/icon-tools.png?resize=32&classes=inline) Amministra il tuo server attraverso **un'interfaccia web amichevole** ;
+- ![](/img/icon-package.png?resize=32&classes=inline) Installa le **applicazioni in pochi clic**;
+- ![](/img/icon-users.png?resize=32&classes=inline) Gestisci **gli utenti ** <small>(basato su LDAP)</small>;
+- ![](/img/icon-globe.png?resize=32&classes=inline) Gestisci **i nomi di dominio**;
+- ![](/img/icon-medic.png?resize=32&classes=inline) Crea e ripristina  **i backup**;
+- ![](/img/icon-door.png?resize=32&classes=inline) Connettiti contemporaneamente a tutte le applicazioni  attraverso **il portale utente** <small>(NGINX, SSOwat)</small>;
+- ![](/img/icon-mail.png?resize=32&classes=inline) Include uno **stack di posta elettronica completo** <small>(Postfix, Dovecot, Rspamd, DKIM)</small>;
+- ![](/img/icon-messaging.png?resize=32&classes=inline)... e anche un **server di messaggistica istantanea** <small>(XMPP)</small>;
+- ![](/img/icon-lock.png?resize=32&classes=inline) Gestisce i **certificati SSL** <small>(basati su Let's Encrypt)</small> ;
+- ![](/img/icon-shield.png?resize=32&classes=inline)... e i **sistemi di sicurezza** <small>(Fail2ban, yunohost-firewall)</small>;
 
 ## Origine
 YunoHost è stata creata nel febbraio 2012 dopo qualcosa del genere:
@@ -36,7 +36,7 @@ Tutto ciò che serviva era un'interfaccia di amministrazione per il server di Be
 Notando il crescente entusiasmo intorno a YunoHost e al self-hosting in generale, gli sviluppatori originari e i nuovi collaboratori hanno deciso di iniziare a lavorare alla versione 2, una versione più estensibile, più potente, più facile da usare e che prepara una bella tazza di caffè equo-solidale per gli elfi della Lapponia.
 
 Il nome **YunoHost** deriva dal gergo "Y U NO Host". Il [meme Internet](https://en.wikipedia.org/wiki/Internet_meme) dovrebbe illustrarlo: 
-![](image://dude_yunohost.jpg)
+![](/img/dude_yunohost.jpg)
 
 ## Cosa non è YunoHost?
 
@@ -50,7 +50,7 @@ Potete ospitare i vostri amici, la vostra famiglia e la vostra azienda in tutta 
 
 Il logo PNG di YunoHost in bianco e nero di ToZz (400 × 400 px):
 
-![](image://ynh_logo_black_300dpi.png?resize=220)
-![](image://ynh_logo_white_300dpi.png?resize=220&id=whitelogo)
+![](/img/ynh_logo_black_300dpi.png?resize=220)
+![](/img/ynh_logo_white_300dpi.png?resize=220&id=whitelogo)
 
 Licenza: CC-BY-SA 4.0
