--- a/i18n/it/docusaurus-plugin-content-docs/current/02.administer/15.admin_guide/20.users/users.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/02.administer/15.admin_guide/20.users/users.mdx
@@ -18,7 +18,7 @@ Il primo utente creato avrà automaticamente l'alias mail `root@main.domani.tld`
 ## Il portale dell'utente, o SSO
 
 [center]
-![](image://user_panel.png)
+![](/img/user_panel.png)
 [/center]
 
 Il portale dell'utente, chiamato anche SSO per 'Single Sign On', permette all'utente di navigare facilmente tra le diverse applicazioni a cui può accedere. In particolare, il termine 'Single Sign On' in pratica fa sì che l'utente debba connettersi al portale per essere automaticamente connesso a tutte le applicazioni che hanno bisogno di un'autenticazione (a comunque quelle che sono integrate con SSO/LDAP, dove ciò non sia tecnicamente complicato o non fosse possibile del tutto).
