--- a/i18n/it/docusaurus-plugin-content-docs/current/02.administer/15.admin_guide/50.backups/backup.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/02.administer/15.admin_guide/50.backups/backup.mdx
@@ -23,7 +23,7 @@ Il metodo di default attuale crea degli archivi `.tar.gz` contenenti tutti i fil
 
 Potete creare gli archivi di backup dalla pagina web di amministrazione andando in Backup > Archivi locali e cliccare su "Nuovo backup". Vi verrà chiesto di selezionare quale configurazione, dati e di quale app volete fare il backup.
 
-![picture of YunoHost's backup pannel](image://backup.png)
+![picture of YunoHost's backup pannel](/img/backup.png)
 
 ### Dalla riga di comando
 
@@ -111,7 +111,7 @@ scp -P porta_ssh /path/to/your/<archivename>.tar admin@your.domain.tld:/home/yun
 Dovete andare in Backup > Archivi locali e selezionare il vostro archivio. È possibile selezionare ciò che volete ripristinare e poi cliccare su 'Ripristina'.
 
 
-![picture of YunoHost's restore pannel](image://restore.png)
+![picture of YunoHost's restore pannel](/img/restore.png)
 
 ### Dalla riga di comando
 
