--- a/i18n/it/docusaurus-plugin-content-docs/current/02.administer/55.providers/05.registrar/ovh/autodns/autodns.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/02.administer/55.providers/05.registrar/ovh/autodns/autodns.mdx
@@ -28,7 +28,7 @@ Questa parte ha lo scopo di guidarvi nella procedura necessaria all'ottenimento 
     - `PUT` : `/domain/zone/*`
     - `DELETE` : `/domain/zone/*`
 
-![](image://registrar_api_ovh_1.png?resize=800)
+![](/img/registrar_api_ovh_1.png?resize=800)
 
 
 3. Otterrete tre tokens (una chiave segreta, una chiave pubblica, e una chiave consumer) che dovranno essere utilizzate nella configurazione di YunoHost
