--- a/i18n/it/docusaurus-plugin-content-docs/current/02.administer/55.providers/05.registrar/ovh/manualdns/manualdns.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/02.administer/55.providers/05.registrar/ovh/manualdns/manualdns.mdx
@@ -13,11 +13,11 @@ Vediamo come configurare il DNS con [OVH](http://www.ovh.com).
 
 Una volta acquistato il vostro nome a dominio, entrate nel Control Panel, cliccate sul nome del vostro dominio che trovate sul lato sinistro:
 
-![](image://ovh_control_panel.png?resize=800)
+![](/img/ovh_control_panel.png?resize=800)
 
 Scegliete la sezione **Zona DNS**, e poi **Aggiungere un record**:
 
-![](image://ovh_dns_zone.png?resize=800)
+![](/img/ovh_dns_zone.png?resize=800)
 
 Ora dovrete aggiungere la redirezione del DNS così come specificato nella [configurazione standard delle zone del DNS](/dns_config)
 
