--- a/i18n/it/docusaurus-plugin-content-docs/current/03.user_guide/15.xmpp/xmpp.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.user_guide/15.xmpp/xmpp.mdx
@@ -7,7 +7,7 @@ routes:
   default: '/XMPP'
 ---
 
-![](image://XMPP_logo.png?resize=100)
+![](/img/XMPP_logo.png?resize=100)
 
 L'installazione di YunoHost comprende il server di messaggistica istantanea Metronome che supporta il [protocollo XMPP](https://it.wikipedia.org/wiki/Extensible_Messaging_and_Presence_Protocol) (precedentemente conosciuto come Jabber). 
 
