--- a/i18n/it/docusaurus-plugin-content-docs/current/04.applications/10.docs/vaultwarden/app_vaultwarden.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/04.applications/10.docs/vaultwarden/app_vaultwarden.mdx
@@ -9,7 +9,7 @@ routes:
     - '/app_bitwarden'
 ---
 
-![Logo di Bitwarden](image://bitwarden_logo.png?width=80)
+![Logo di Bitwarden](/img/bitwarden_logo.png?width=80)
 
 [![Installa Vaultwarden con YunoHost](https://install-app.yunohost.org/install-with-yunohost.png)](https://install-app.yunohost.org/?app=vaultwarden) [![Livello di integrazione](https://dash.yunohost.org/integration/vaultwarden.svg)](https://dash.yunohost.org/appci/app/vaultwarden)
 
