--- a/i18n/ru/01.overview/05.self_hosting/self_hosting.mdx
+++ b/i18n/ru/01.overview/05.self_hosting/self_hosting.mdx
@@ -27,7 +27,7 @@ routes:
 * Вы - единственный хозяин ваших данных и сервисов;
 * Возможность децентрализации и использования распределенных сетей;
 
-![](image://networks.png?resize=500)
+![](/img/networks.png?resize=500)
 
 #### Другие проекты, предназначенные для самостоятельного развертывания
 ##### В активной разработке
