--- a/i18n/it/docusaurus-plugin-content-docs/current/02.administer/15.admin_guide/10.admin/admin.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/02.administer/15.admin_guide/10.admin/admin.mdx
@@ -13,5 +13,5 @@ YunoHost ha un'interfaccia web di amministrazione. L'altro metodo è quello di u
 
 L'interfaccia di amministrazione è accessibile all'indirizzo https://example.org/yunohost/admin (sostituisci 'example.org' con il tuo dominio)
 
-![](image://webadmin.png)
+![](/img/webadmin.png)
 
