fr: fix install title

--- a/i18n/fr/docusaurus-plugin-content-docs/current/02.install/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/02.install/index.mdx
@@ -1,5 +1,7 @@
 import Link from '@docusaurus/Link';
 
+# Choisissez votre méthode d'hébergement et vos fournisseurs
+
 Vous pouvez vous auto-héberger à la maison (sur un petit ordinateur), ou sur un serveur distant. Chaque solution a ses avantages et inconvénients :
 
 ### À la maison, par exemple sur une carte ARM ou un ancien ordinateur
@@ -97,4 +99,3 @@ export const styleDanger = {
     </tr>
   </tbody>
 </table>
-
