Fix links in de, fr

--- a/i18n/de/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/05.guidelines.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/05.guidelines.mdx
@@ -36,7 +36,7 @@ Vermeiden Sie das. Eine neue Installation ist mühsam und keine gute langfristig
 
 ## Backups erstellen
 
-Wenn Sie Dienste und Daten hosten, die für Ihre Benutzer wichtig sind, ist es wichtig, dass Sie über eine Sicherungsrichtlinie verfügen. Backups können einfach über die Webadministrationsoberfläche erstellt werden - allerdings können sie derzeit nicht von dort heruntergeladen werden (aber sie können auf anderem Wege heruntergeladen werden). Sie sollten regelmäßig Backups erstellen und diese an einem sicheren Ort aufbewahren, der physisch von Ihrem Server getrennt ist. Weitere Informationen finden Sie in [der Backup-Dokumentation](/category/backup).
+Wenn Sie Dienste und Daten hosten, die für Ihre Benutzer wichtig sind, ist es wichtig, dass Sie über eine Sicherungsrichtlinie verfügen. Backups können einfach über die Webadministrationsoberfläche erstellt werden - allerdings können sie derzeit nicht von dort heruntergeladen werden (aber sie können auf anderem Wege heruntergeladen werden). Sie sollten regelmäßig Backups erstellen und diese an einem sicheren Ort aufbewahren, der physisch von Ihrem Server getrennt ist. Weitere Informationen finden Sie in [der Backup-Dokumentation](/category/backups).
 
 ## Die an Root gesendeten Emails lesen
 
