--- a/i18n/de/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/15.command_line.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/15.command_line.mdx
@@ -45,7 +45,7 @@ Nach dem allerersten Login sollte man das root Passwort ändern. Der Server kön
 
 #### Auf ans Konfigurieren!
 
-Wir sind nun bereit, mit der [Postinstallation](/postinstall) zu beginnen.
+Wir sind nun bereit, mit der [Postinstallation](/install/post_install/configuration) zu beginnen.
 
 ## Nach der Installation von YunoHost
 
@@ -57,7 +57,7 @@ Wenn du nur die IP-Adresse deines Servers kennst :
 ssh admin@111.222.333.444
 ```
 
-Dann musst du dein Administratorkennwort eingeben, das du unter [Post-Installationsschritt](/postinstall) erstellt hast.
+Dann musst du dein Administratorkennwort eingeben, das du unter [Post-Installationsschritt](/install/post_install/configuration) erstellt hast.
 
 Wenn du dein DNS konfiguriert hast (oder deine `/etc/hosts` optimiert hast), kannst du einfach deinen Domainnamen verwenden:
 
@@ -99,9 +99,9 @@ yunohost user ssh list-keys <username>
 
 ## Sicherheit und SSH
 
-N.B.: `fail2ban` sperrt deine IP für 10 Minuten, wenn du 5 fehlgeschlagene Login-Versuche durchführst. Wenn du die IP-Sperre aufheben willst, schau dir die Seite über [Fail2Ban](/fail2ban) an.
+N.B.: `fail2ban` sperrt deine IP für 10 Minuten, wenn du 5 fehlgeschlagene Login-Versuche durchführst. Wenn du die IP-Sperre aufheben willst, schau dir die Seite über [Fail2Ban](/administer/troubleshooting/fail2ban) an.
 
-Eine ausführlichere Diskussion über Sicherheit & SSH findest du auf der [dedicated page](/security).
+Eine ausführlichere Diskussion über Sicherheit & SSH findest du auf der [dedicated page](/administer/tutorials/security).
 
 
 ## YunoHost Kommandozeile
