--- a/i18n/de/docusaurus-plugin-content-docs/current/05.community/20.faq.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/05.community/20.faq.mdx
@@ -10,7 +10,7 @@ YunoHost basiert auf Debian, also auch auf Lizenzen von Debian Bestandteilen.
 
 Die Anwendungen und Applikations-Pakete stehen unter ihren jeweiligen, eigenen Lizenzen.
 
-#### Was ist das Ziel von YunoHost ?
+#### Was ist das Ziel von YunoHost ? {#whats-yunohost-goal}
 
 Wir glauben, dass Dezentralisierung sowie Kontrolle und Verantwortung über die eigenen Daten und Dienste ein wichtiger Bestandteil einer freien und demokratischen Gesellschaft ist.
 
