--- a/i18n/de/docusaurus-plugin-content-docs/current/06.contribute/05.write_documentation/index.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/06.contribute/05.write_documentation/index.mdx
@@ -73,7 +73,7 @@ routes:
 
 ## Syntax 
 
-Sie können die Markdown-Syntax verwenden. Weitere Informationen finden Sie in der [Dokumentation](/doc_markdown_guide).
+Sie können die Markdown-Syntax verwenden. Weitere Informationen finden Sie in der [Dokumentation](/contribute/write_documentation/markdown_guide).
 
 ! Beachten Sie, dass Sprachcodes nicht am Anfang der Links zu anderen Dokumentationsseiten stehen dürfen: `/en`,` /fr` usw. sind überflüssig. 
 
