--- a/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/05.write_documentation/02.markdown_guide.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/05.write_documentation/02.markdown_guide.mdx
@@ -177,7 +177,8 @@ On obtient :
 3. Liste 5
 4. liste 6
 
-### Listes non ordonnées<a name="nomdelancre"></a>
+{useBrokenLinks().collectAnchor("nomdelancre")}
+### <span id="nomdelancre">Listes non ordonnées</span>
 
 Pour créer une liste non ordonnée, il faut utiliser les symboles `*`, `+` ou `*`. Cela ne changera pas l'apparence du marqueur dans la restitution du texte. C'est l'incrémentation de la liste qui définira le visuel. Pour une meilleure lecture du texte brut, il peut être pratique d'utiliser les différents symboles pour marquer l'incrémentation, mais ce sont bien les trois espaces avant la sous-liste qui désigneront l'incrémentation.
 Comme tel :
