fr: fix markdown guide

--- a/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/05.write_documentation/02.markdown_guide.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/05.write_documentation/02.markdown_guide.mdx
@@ -2,6 +2,8 @@
 title: Guide Markdown
 ---
 
+import useBrokenLinks from '@docusaurus/useBrokenLinks';
+
 Le Markdown est un langage de balisage créé en 2004, de nombreux add-on développant les possibilités de ce langage existent. L'objectif de ce guide est de tendre vers l’exhaustivité des possibilités de ce langage de formatage dans le cadre de la documentation de YunoHost et non des langages Markdown en général.
 
 Markdown permet de formater du texte à l'aide de balises, il permet une lecture *humaine* du texte ; même avec le formatage. Même si un unique bloc note est nécessaire il existe de nombreux logiciels markdowns (Markdown sur [framalibre.org](https://framalibre.org/recherche-par-crit-res?keys=markdown)). Sa prise en main est relativement facile.
