--- a/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/05.write_documentation/02.markdown_guide.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/05.write_documentation/02.markdown_guide.mdx
@@ -110,10 +110,10 @@ Pour afficher des images, le principe est identique aux liens, excepté l'ajout 
 Il est possible de faire un lien avec une image, exemple :
 
 ```markdown
-[![Logo YunoHost](/img/logo.png)](/write_documentation)
+[![Logo YunoHost](/img/logo.png)](/contribute/write_documentation/)
 ```
 
-[![Logo YunoHost](/img/logo.png)](/write_documentation)
+[![Logo YunoHost](/img/logo.png)](/contribute/write_documentation/)
 
 L'encart de *texte à afficher en cas d'impossibilité de chargement de l'image* entre les crochets dans le lien de l'image n'est pas obligatoire mais fortement recommandé.
 
