--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/45.email.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/45.email.mdx
@@ -32,7 +32,7 @@ Des alias de messagerie et des redirections peuvent être configurés pour chaqu
 
 Une autre fonctionnalité méconnue est l'utilisation de suffixes commencant par "+". Par exemple, les emails envoyés à `johndoe+sncf@votre.domaine.tld` atteriront dans le dossier 'sncf' de la boîte mail de John Doe (ou bien directement dans la boîte mail si ce dossier n'existe pas). C'est une technique pratique pour, par exemple, fournir une adresse mail à un site puis facilement trier (via des filtres automatiques) les courriers venant de ce site.
 
-Les groupes aussi peuvent utiliser des alias, par défaut le groupe `admins` dispose de `root@<domain.tld>` ou encore `webmaster@<domain.tld>`. [Plus d'information dans la page dédiée](/administer/admin_guide/users/groups_and_permissions#config-alias-group).
+Les groupes aussi peuvent utiliser des alias, par défaut le groupe `admins` dispose de `root@<domain.tld>` ou encore `webmaster@<domain.tld>`. [Plus d'information dans la page dédiée](/administer/admin_guide/users/groups_and_permissions#gérer-les-alias-des-groupes).
 
 ## Que se passe-t-il si mon serveur devient indisponible ?
 
