--- a/i18n/fr/docusaurus-plugin-content-docs/current/05.community/20.faq.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/05.community/20.faq.mdx
@@ -10,7 +10,7 @@ YunoHost est basé sur Debian, donc sur les licences des éléments sur lesquels
 
 Les applications et leurs paquets ont leurs licences respectives.
 
-#### Quel est l’objectif de YunoHost ?
+#### Quel est l’objectif de YunoHost ? {#whats-yunohost-goal}
 
 Nous pensons que la décentralisation d’Internet, et la reprise du contrôle et de la responsabilité des données et services par les personnes est un enjeu crucial pour garantir une société libre et démocratique.
 
