--- a/i18n/fr/docusaurus-plugin-content-docs/current/02.install/40.post_install/05.configuration.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/02.install/40.post_install/05.configuration.mdx
@@ -9,7 +9,7 @@ import TabItem from '@theme/TabItem';
 ## <FAIcon icon="fa-cog"/> Lancer la configuration initiale
 
 :::tip
-Si vous êtes en train de restaurer une sauvegarde YunoHost, vous devez sauter cette étape et vous référer à la section [Restaurer durant la post-installation à la place de cette étape de configuration initiale](/administer/backups#restoring-backups).
+Si vous êtes en train de restaurer une sauvegarde YunoHost, vous devez sauter cette étape et vous référer à la section [Restaurer durant la post-installation à la place de cette étape de configuration initiale](/administer/backups#restaurer).
 :::
 
 :::note
