it: fix links and warnings

--- a/i18n/it/docusaurus-plugin-content-docs/current/05.community/20.faq.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/05.community/20.faq.mdx
@@ -10,7 +10,7 @@ YunoHost è basato sulla distribuzione Debian, quindi rispetta le licenze degli 
 
 I programmi e i pacchetti hanno la loro propria licenza.
 
-#### Quale obbiettivo si prefigge YunoHost?
+#### Quale obbiettivo si prefigge YunoHost? {#whats-yunohost-goal}
 
 Siamo convinti che la decentralizzazione di Internet, e il riappropriarsi della responsabilità e del controllo dei nostri dati e servizi, sia una questione essenziale per garantire una società libera e democratica.
 
