--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/20.users/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/20.users/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Les utilisateusr et le SSO
+title: Les utilisateurs et le SSO
 ---
 
 import Figure from '@site/src/components/Figures';
