--- a/docs/02.install/10.providers/10.isp/orange.mdx
+++ b/docs/02.install/10.providers/10.isp/orange.mdx
@@ -2,6 +2,6 @@
 title: Orange (France)
 ---
 
-import {LangRedirect} from '@site/src/components/LangRedirect';
+import LangRedirect from '@site/src/components/LangRedirect';
 
-<LangRedirect lang="fr" />
+<LangRedirect lang="fr"/>
