Create HardRedirects and DocumentedHardRedirect

--- a/docs/02.install/10.providers/10.isp/free.mdx
+++ b/docs/02.install/10.providers/10.isp/free.mdx
@@ -2,6 +2,6 @@
 title: Free (France)
 ---
 
-import LangRedirect from '@site/src/components/LangRedirect';
+import {LangRedirect} from '@site/src/components/HardRedirects';
 
 <LangRedirect lang="fr"/>
