--- a/docs/05.community/05.forum.mdx
+++ b/docs/05.community/05.forum.mdx
@@ -1,5 +1,10 @@
 ---
 title: Forum
+description: ""
 ---
 
-{/* TODO: Redirect to forum */}
+import {DocumentedHardRedirect} from '@site/src/components/HardRedirects';
+
+<DocumentedHardRedirect
+    url="https://forum.yunohost.org"
+    description="the forum"/>
