--- a/docs/05.community/25.yunohost_project_organization.mdx
+++ b/docs/05.community/25.yunohost_project_organization.mdx
@@ -2,4 +2,8 @@
 title: Project organisation
 ---
 
-{/* TODO: redirect: 'https://github.com/YunoHost/project-organization/' */}
+import {DocumentedHardRedirect} from '@site/src/components/HardRedirects';
+
+<DocumentedHardRedirect
+    url="https://github.com/YunoHost/project-organization"
+    description="the project organization repository on Github"/>
