--- a/docs/05.community/45.chatons.mdx
+++ b/docs/05.community/45.chatons.mdx
@@ -2,4 +2,8 @@
 title: Creating a CHATONS with YunoHost
 ---
 
-{/* TODO: redirect: 'https://wiki.chatons.org/doku.php/heberger/administration_systeme/yunohost' */}
+import {DocumentedHardRedirect} from '@site/src/components/HardRedirects';
+
+<DocumentedHardRedirect
+    url="https://wiki.chatons.org/doku.php/heberger/administration_systeme/yunohost"
+    description="the CHATONS documentation"/>
