--- a/docs/02.install/10.providers/10.isp/index.mdx
+++ b/docs/02.install/10.providers/10.isp/index.mdx
@@ -6,9 +6,6 @@ description: The guys that provide the internet line and router
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-{/* TODO: Update from grav */}
-
-
 <Tabs
 defaultValue="europe"
 values={[
@@ -43,6 +40,13 @@ values={[
 | LG U+ (HelloVision) | Multiple | Yes | Yes (Without ISP Router) | No | - | Partial |
 | KT(SkyLife, Qook&Show) | Multiple | Yes | Yes | No | - | Partial |
 | SKT (SK Broadband) | Multiple | Yes | Yes | No | - | Partial |
+
+</TabItem>
+<TabItem value="twn" label="Taïwan">
+
+| Service provider | Box (modem/router) | uPnP available | Port 25 openable | [Hairpinning](http://en.wikipedia.org/wiki/Hairpinning) | Customizable reverse DNS | Fix IP |
+| --- | --- | --- | --- | --- | --- | --- |
+| CHT (Chunghwa Telecom) | Multiple | Yes | Yes | Yes (Need hidden settings) | No | Partial |
 
 </TabItem>
 </Tabs>
