--- a/docs/06.contribute/15.dev/forms.mdx
+++ b/docs/06.contribute/15.dev/forms.mdx
@@ -139,9 +139,11 @@ FIXME i'm not sure we have this in code.
 Options are fields declaration that renders as form items, button, alert or text in the web-admin and printed or prompted in CLI.
 They are used in app manifests to declare the before installation form and in config panels.
 
-[Have a look at the app config panel doc](/packaging_config_panels) for details about Panels and Sections.
+[Have a look at the app config panel doc](/contribute/packaging_apps/advanced/config_panels) for details about Panels and Sections.
 
-! IMPORTANT: as for Panels and Sections you have to choose an id, but this one should be unique in all this document, even if the question is in an other panel.
+:::warning
+As for Panels and Sections you have to choose an id, but this one should be unique in all this document, even if the question is in an other panel.
+:::
 
 #### Example
 
@@ -185,7 +187,7 @@ bind = "null"
     - else the value will be stored as the whole content of the file
     - you can use `__FINALPATH__` or `__INSTALL_DIR__` in your path to point to dynamic install paths
       - FIXME are other global variables accessible?
-  - [refer to `bind` doc for explaination and examples](#read-and-write-values-the)
+  - [refer to `bind` doc for explaination and examples](/contribute/packaging_apps/advanced/config_panels#the-bind-statement)
 
 ---
 
